objects/Bundled_Siblings__c.object
<CustomObject>
    <description>This object is for UI purpose only, supporting a related list on each opportunity to show 
Siblings.</description>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Created for CR</description>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundled Siblings</relationshipLabel>
        <relationshipName>Bundled_Siblings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Date_To__c</fullName>
        <description>Created for CR-5272.</description>
        <formula>To__r.CloseDate</formula>
        <label>Close Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-5272.</description>
        <label>From</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>BI_Marketing</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Core_Marketing</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Southwind</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bundled Siblings (From)</relationshipLabel>
        <relationshipName>Bundled_Siblings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketer_Name_To__c</fullName>
        <description>Created for CR-5272</description>
        <formula>To__r.Marketer_Name1__c</formula>
        <label>Marketer Name (To)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Value_To__c</fullName>
        <formula>To__r.Amount</formula>
        <label>Proposal Value (To)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR</description>
        <label>To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>BI_Marketing</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Core_Marketing</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Southwind</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bundled Siblings</relationshipLabel>
        <relationshipName>Bundled_Siblings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundled Siblings</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Bundled Siblings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundled Siblings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>